// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render items in App correctly 1`] = `
<span>
  No items in list
</span>
`;

exports[`renders correctly when there are multiple items 1`] = `
<ul>
  <li
    className="this-test"
  >
    one
  </li>
  <li
    className="this-test"
  >
    two
  </li>
  <li
    className="this-test"
  >
    three
  </li>
</ul>
`;

exports[`renders correctly when there is a single item 1`] = `
<span>
  one
</span>
`;
